Add Header component

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,16 @@ body {
     font-family: 'Open Sans Condensed', sans-serif;
     padding: 20px 60px;
 }
+
+a {
+    text-decoration: none;
+
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:visited {
+    color: inherit;
+}
